Adding images and such

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,11 @@
     "storage"
   ],
 
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
+
+
   "web_accessible_resources": ["script.js"],
 
   "content_scripts": [
