--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "University of Guelph Website Enhancer",
-  "shortname": "UoG Enhancer",
+  "short_name": "UoG Enhancer",
   "version": "1.1.0",
   "description": "An extension to improve the University of Guelph webpages as we all know they could use some work.",
 
