--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,12 @@
 
   "name": "University of Guelph Website Enhancer",
   "short_name": "UoG Enhancer",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "An extension to improve the University of Guelph webpages as we all know they could use some work.",
 
   "permissions": [
-    "https://webadvisor.uoguelph.ca/"
+    "https://webadvisor.uoguelph.ca/",
+    "storage"
   ],
 
   "icons": { "16": "icon16.png",
@@ -19,11 +20,12 @@
 
   "content_scripts": [
     {
-		"run_at": "document_end",
-    "matches": ["https://webadvisor.uoguelph.ca/*"],
-    "js": ["resources/jquery-2.1.1.min.js","main.js"],
-		"css": ["style.css"],
-        "all_frames": true
+  		"run_at": "document_end",
+      "matches": ["https://webadvisor.uoguelph.ca/*",
+                  "*://jhvisser.com/*"],
+      "js": ["resources/jquery-2.1.1.min.js","main.js"],
+  		"css": ["style.css"],
+      "all_frames": true
     }
   ]
 }
